--- a/Nhom4_Kempinki/src/views/layouts/master.pug
+++ b/Nhom4_Kempinki/src/views/layouts/master.pug
@@ -50,7 +50,7 @@ html(lang='en')
     //- block content
     block content
     
-    include ../components/footer/footer.pug
+    //- include ../components/footer/footer.pug
     //- block scripts
     block scripts
 
