--- a/Nhom4_Kempinki/src/views/components/gallerypage/olapic-wall/olapic-wall.scss
+++ b/Nhom4_Kempinki/src/views/components/gallerypage/olapic-wall/olapic-wall.scss
@@ -66,6 +66,9 @@
         .olapic-desktop {
           display: flex;
           justify-content: center;
+          @include min-sm{
+            display: flex !important;
+          }
           @include mobile {
             display: none;
             flex-direction: column;
