--- a/Nhom4_Kempinki/src/views/components/homepage/explore/explore.scss
+++ b/Nhom4_Kempinki/src/views/components/homepage/explore/explore.scss
@@ -37,8 +37,7 @@ $height_hotels_des: 550px;
 }
 .explore {
   background: #f3f3f3 !important;
-  overflow: hidden;
-  @include device{
+  @include device {
     background: white !important;
   }
   .country {
@@ -83,12 +82,21 @@ $height_hotels_des: 550px;
         top: 420%;
         opacity: 0;
         z-index: 1;
+        @include max-md{
+          opacity: 1;
+        }
       }
       > .slick-next {
         right: 80px;
         top: 420%;
         opacity: 0;
         z-index: 1;
+        @include mobile{
+          right: 70px;
+        }
+        @include max-md{
+          opacity: 1;
+        }
       }
       @include button;
       .slick-slide {
@@ -139,7 +147,7 @@ $height_hotels_des: 550px;
       left: 0;
       top: -40px;
       z-index: 10;
-      @include max-xl{
+      @include max-xl {
         width: 100px;
       }
       img {
@@ -154,7 +162,7 @@ $height_hotels_des: 550px;
       right: 0;
       top: -40px;
       z-index: 10;
-      @include max-xl{
+      @include max-xl {
         width: 100px;
       }
       img {
@@ -168,7 +176,7 @@ $height_hotels_des: 550px;
     margin-bottom: 25px;
     z-index: 0;
     overflow: hidden;
-    @include device{
+    @include device {
       height: auto;
     }
     .hotel_des {
@@ -188,17 +196,36 @@ $height_hotels_des: 550px;
           left: 20px;
           z-index: 999;
           opacity: 0;
+          @include mobile {
+            top: 25%;
+            opacity: 1;
+          }
+          @include max-md{
+            top: 25%;
+            opacity: 1;
+          }
         }
         .slick-next {
           top: 40%;
-          right: 80px;
+          right: 70px;
           z-index: 999;
           opacity: 0;
+          @include max-md{
+            top: 25%;
+            opacity: 1;
+          }
+          @include mobile {
+            top: 25% ;
+            opacity: 1;
+          }
         }
       }
       .img {
         width: 100%;
         height: $height_hotels_des;
+        @include mobile{
+           height: 400px;
+        }
         img {
           width: 100%;
           height: 100%;
@@ -209,16 +236,16 @@ $height_hotels_des: 550px;
         width: 1170px !important;
         padding-left: 30px;
         display: block;
-        @include device{
+        @include device {
           width: 970px !important;
-          word-wrap:break-word; 
+          word-wrap: break-word;
           padding-left: 0;
         }
-        @include max-md{
+        @include max-md {
           width: 750px !important;
           padding-left: 0;
         }
-        @include mobile{
+        @include mobile {
           width: auto !important;
           padding-left: 0px;
         }
@@ -229,7 +256,7 @@ $height_hotels_des: 550px;
           height: 450px;
           top: 100px;
           background: white;
-          @include device{
+          @include device {
             position: inherit;
             width: 100%;
           }
