--- a/adaptis-master/src/views/layouts/master.pug
+++ b/adaptis-master/src/views/layouts/master.pug
@@ -54,7 +54,7 @@ html(lang='jp')
 
     //- block content
     block content
-    include ../components/relative/relative.pug
+    //-include ../components/relative/relative.pug
     //-include ../components/thework/thework.pug
     include ../components/footer/footer.pug
 
