--- a/Nhom4_Kempinki/src/views/components/homepage/experiences/experiences.pug
+++ b/Nhom4_Kempinki/src/views/components/homepage/experiences/experiences.pug
@@ -1,8 +1,8 @@
 .experiences 
     .section-title.text-center
       .container-fluid
-        h2.block-title EXPERIENCES WITH KEMPINSKI
-        p.sub-title 
+        h2.block-title.wow.fadeInUp EXPERIENCES WITH KEMPINSKI
+        p.sub-title.wow.fadeInUp(data-wow-delay="0.1s") 
           span.line
           span.text In over 30 countries
     .room-slide
@@ -20,7 +20,7 @@
           a(href="")
             img(src="../../../../assets/images/lockuplogo.png", alt="lockuplogo")
         .slide-caption
-          .title WEDDINGS AT KEMPINSKI
+          .title EXPERIENCE KEMPINSKI DISCOVERY
           .description: p Your wedding day should be the most special day of your life. From the first conversations to the 'I do' and beyond, here at Kempinski we pride ourselves on being able to offer you the most spectacular day, honeymoon and even bachelor and bachelorette parties at many venues around the world.
           .further-info
             a.btn-further-info(href="", title="Further Information") Further Information
@@ -29,7 +29,7 @@
           a(href="")
             img(src="../../../../assets/images/room1.jpg", alt="room1")
         .slide-caption
-          .title WEDDINGS AT KEMPINSKI
+          .title SPA & WELLNESS
           .description: p Your wedding day should be the most special day of your life. From the first conversations to the 'I do' and beyond, here at Kempinski we pride ourselves on being able to offer you the most spectacular day, honeymoon and even bachelor and bachelorette parties at many venues around the world.
           .further-info
             a.btn-further-info(href="", title="Further Information") Further Information
@@ -38,7 +38,7 @@
           a(href="")
             img(src="../../../../assets/images/ice.jpg", alt="ice")
         .slide-caption
-          .title WEDDINGS AT KEMPINSKI
+          .title GASTRONOMY EXPERIENCES
           .description: p Your wedding day should be the most special day of your life. From the first conversations to the 'I do' and beyond, here at Kempinski we pride ourselves on being able to offer you the most spectacular day, honeymoon and even bachelor and bachelorette parties at many venues around the world.
           .further-info
             a.btn-further-info(href="", title="Further Information") Further Information
@@ -47,7 +47,7 @@
           a(href="")
             img(src="../../../../assets/images/room2.jpg", alt="room2")
         .slide-caption
-          .title WEDDINGS AT KEMPINSKI
+          .title SIGNATURE SUITES
           .description: p Your wedding day should be the most special day of your life. From the first conversations to the 'I do' and beyond, here at Kempinski we pride ourselves on being able to offer you the most spectacular day, honeymoon and even bachelor and bachelorette parties at many venues around the world.
           .further-info
             a.btn-further-info(href="", title="Further Information") Further Information
@@ -56,7 +56,7 @@
           a(href="")
             img(src="../../../../assets/images/golf.jpg", alt="golf")
         .slide-caption
-          .title WEDDINGS AT KEMPINSKI
+          .title GOLF DESTINATIONS
           .description: p Your wedding day should be the most special day of your life. From the first conversations to the 'I do' and beyond, here at Kempinski we pride ourselves on being able to offer you the most spectacular day, honeymoon and even bachelor and bachelorette parties at many venues around the world.
           .further-info
             a.btn-further-info(href="", title="Further Information") Further Information
@@ -65,9 +65,10 @@
           a(href="")
             img(src="../../../../assets/images/ski.jpg", alt="ski")
         .slide-caption
-          .title WEDDINGS AT KEMPINSKI
-          .description: p Your wedding day should be the most special day of your life. From the first conversations to the 'I do' and beyond, here at Kempinski we pride ourselves on being able to offer you the most spectacular day, honeymoon and even bachelor and bachelorette parties at many venues around the world.
+          .title SKI DESTINATIONS
+          .description: p Your wedding day should be the most special day of your life. From the first conversations to the 'I do' and beyond, here at Kempinski we pride ourselves on being able to offer you the most spectacular day, honeymoon and even bachelor and bachelorette parties at many venues around the world. Your wedding day should be the most special day of your life. From the first conversations to the 'I do' and beyond, here at Kempinski we pride ourselves on being able to offer you the most spectacular day, honeymoon and even bachelor and bachelorette parties at many venues around the world. Your wedding day should be the most special day of your life. From the first conversations to the 'I do' and beyond, here at Kempinski we pride ourselves on being able to offer you the most spectacular day Your wedding day should be the most special day of your life. From the first conversations to the 'I do' and beyond, here at Kempinski we pride ourselves on being able to offer you the most spectacular day
           .further-info
+          .further-info 
             a.btn-further-info(href="", title="Further Information") Further Information
 
 
