--- a/Nhom4_Kempinki/src/views/components/homepage/gallery/gallery.pug
+++ b/Nhom4_Kempinki/src/views/components/homepage/gallery/gallery.pug
@@ -1,8 +1,8 @@
 .home-gallery
     .section-title.text-center
         .container-fluid
-            h2.block-title #KEMPINSKI GALLERY
-            p.sub-title 
+            h2.block-title.wow.fadeInUp #KEMPINSKI GALLERY
+            p.sub-title.wow.fadeInUp(data-wow-delay="0.1s") 
                 span.text Our guests always travel the world in style. Mention @Kempinski on Instagram for a chance to be featured!
     .container-fluid.container
         .gallery-slide
@@ -30,7 +30,7 @@
                 a(href="", class="gallery-item", data-fancybox="gallery", data-src="#kandaclub")
                     .bg-dark @kandaclub
                     img(src="../../../../assets/images/kandaclub.jpg", alt="kandaclub")
-    .container-fluid
+    .container-fluid.container
         .gallery-footer
             a(href="", class="btn-further-info") View gallery
             a(href="", class="btn-further-info") Add a photo
@@ -38,10 +38,10 @@
 #anasalali.gallery-slide2
     .container-fluid
         .row
-            .col-lg-7.col-photo
+            .col-md-7.col-photo
                 img(src="../../../../assets/images/anasanali.jpg", alt="anasanali")
                 a(href="", class="report-image ", title="Report photo?") 
-            .col-lg-5
+            .col-md-5
                 .user
                     a(href="")
                         img(src="../../../../assets/images/avatar.png", alt="avatar")
@@ -68,10 +68,10 @@
 #bernabetv.gallery-slide2
     .container-fluid
         .row
-            .col-lg-7.col-photo
+            .col-md-7.col-photo
                 img(src="../../../../assets/images/bernabetv.jpg", alt="bernabetv")
                 a(href="", class="report-image ", title="Report photo?") 
-            .col-lg-5
+            .col-md-5
                 .user
                     a(href="")
                         img(src="../../../../assets/images/avatar.png", alt="avatar")
@@ -98,10 +98,10 @@
 #tourismsa.gallery-slide2
     .container-fluid
         .row
-            .col-lg-7.col-photo
+            .col-md-7.col-photo
                 img(src="../../../../assets/images/tourismsa.jpg", alt="seychellestourismsa")
                 a(href="", class="report-image ", title="Report photo?") 
-            .col-lg-5
+            .col-md-5
                 .user
                     a(href="")
                         img(src="../../../../assets/images/avatar.png", alt="avatar")
@@ -128,10 +128,10 @@
 #grotesque.gallery-slide2
     .container-fluid
         .row
-            .col-lg-7.col-photo
+            .col-md-7.col-photo
                 img(src="../../../../assets/images/grotesque.jpg", alt="anny_grotesque")
                 a(href="", class="report-image ", title="Report photo?") 
-            .col-lg-5
+            .col-md-5
                 .user
                     a(href="")
                         img(src="../../../../assets/images/avatar.png", alt="avatar")
@@ -158,10 +158,10 @@
 #dubai.gallery-slide2
     .container-fluid
         .row
-            .col-lg-7.col-photo
+            .col-md-7.col-photo
                 img(src="../../../../assets/images/dubai.jpg", alt="brasileiros_em_dubai")
                 a(href="", class="report-image ", title="Report photo?") 
-            .col-lg-5
+            .col-md-5
                 .user
                     a(href="")
                         img(src="../../../../assets/images/avatar.png", alt="avatar")
@@ -188,10 +188,10 @@
 #kandaclub.gallery-slide2
     .container-fluid
         .row
-            .col-lg-7.col-photo
+            .col-md-7.col-photo
                 img(src="../../../../assets/images/kandaclub.jpg", alt="kandaclub")
                 a(href="", class="report-image ", title="Report photo?") 
-            .col-lg-5
+            .col-md-5
                 .user
                     a(href="")
                         img(src="../../../../assets/images/avatar.png", alt="avatar")
