--- a/Nhom4_Kempinki/src/views/components/homepage/specialoffers/specialoffers.pug
+++ b/Nhom4_Kempinki/src/views/components/homepage/specialoffers/specialoffers.pug
@@ -1,15 +1,15 @@
 .special-offers
     .section-title.text-center
       .container-fluid
-        h2.block-title SPECIAL OFFERS
-        p.sub-title 
+        h2.block-title.wow.fadeInUp SPECIAL OFFERS
+        p.sub-title.wow.fadeInUp(data-wow-delay="0.1s")  
           span.line
           span.text Exciting Packages
     .container-fluid.container
         .offers-slide
             .item
                 .slide-image
-                    a(href="")
+                    a(href="/special-offers")
                         img(src="../../../../assets/images/palmleaf.jpg", alt="palmleaf")
                 .slide-caption
                     .title Escape in Style this Summer
@@ -19,7 +19,7 @@
                         a.btn-further-info Further Information
             .item
                 .slide-image
-                    a(href="")
+                    a(href="/special-offers")
                         img(src="../../../../assets/images/earlybooker.jpg", alt="earlybooker")
                 .slide-caption
                     .title EARLY BOOKER
@@ -29,7 +29,7 @@
                         a.btn-further-info Further Information
             .item
                 .slide-image
-                    a(href="")
+                    a(href="/special-offers")
                         img(src="../../../../assets/images/sanclementea.jpg", alt="sanclementea")
                 .slide-caption
                     .title SUITELY SENSATIONAL
@@ -40,7 +40,7 @@
                         a.btn-further-info Further Information
             .item
                 .slide-image
-                    a(href="")
+                    a(href="/special-offers")
                         img(src="../../../../assets/images/tmov.jpg", alt="tmov")
                 .slide-caption
                     .title WELLNESS & SPA
