--- a/Nhom4_Kempinki/src/assets/styles/_app.scss
+++ b/Nhom4_Kempinki/src/assets/styles/_app.scss
@@ -5,6 +5,8 @@
 @import './base/_functions';
 @import './base/_variables';
 @import './base/_mixins';
+@import '../../../node_modules/slick-carousel/slick/slick.css';
+@import '../../../node_modules/slick-carousel/slick/slick-theme.scss';
 @import './base/_fonts';
 @import '../../../node_modules/slick-carousel/slick/slick.css';
 @import '../../../node_modules/slick-carousel/slick/slick-theme.scss';
@@ -15,8 +17,10 @@
 @import './base/_lazyload';
 
 // Component
+@import '../../views/components/homepage/explore/explore';
 @import '../../views/components/header/header';
 @import '../../views/components/footer/footer';
 @import '../../views/components/homepage/experiences/experiences';
 @import '../../views/components/homepage/gallery/gallery';
 @import '../../views/components/homepage/specialoffers/specialoffers';
+@import '../../views/components/specialoffers/specialoffers/specialoffers';
