--- a/Nhom4_Kempinki/src/views/components/homepage/experiences/experiences.scss
+++ b/Nhom4_Kempinki/src/views/components/homepage/experiences/experiences.scss
@@ -1,3 +1,23 @@
+@mixin max-xl {
+    @media screen and (max-width: #{breakpoints(xl) - 1px}) {
+        @content;
+    }
+}
+@mixin max-xs {
+    @media screen and (max-width: #{breakpoints(xs) - 1px}) {
+        @content;
+    }
+}
+@media only screen and (min-width: breakpoints(sm)) {
+    .container-fluid {
+        width: 68rem;
+    }
+}
+@media only screen and (min-width: breakpoints(md)) {
+    .container-fluid {
+        width: 88rem;
+    }
+}
 .experiences{
     padding: 30px 0;
     margin-bottom: 35px;
@@ -49,19 +69,66 @@
                     display: inline-block;
                     padding-left: 20px;
                     vertical-align: top;
-                    @include device{
-                        display: block;
-                        width: 100%;
-                        padding-left: 0;
-                    }
                 }
                 .slide-image{
                     padding-left: 0;
+                    position: absolute;
+                    height: calc(100% - 50px);
+                    display: inline-block;
+                    vertical-align: top;
+                    left: 25px;
+                    padding-right: 25px;
+                    @include max-xl{
+                        display: block;
+                        width: 100%;
+                        position: static;
+                        padding-right: 0;
+                        max-height: 300px;
+                        overflow: hidden;
+                    }
+                    a{
+                        display: block;
+                        height: 100%;
+                        img{
+                            height: 100%;
+                            object-fit: cover;
+                        }
+                    }
                 }
                 .slide-caption{
+                    margin-left: 50%;
+                    height: 400px;
+                    @include max-xl{
+                        display: block;
+                        width: 100%;
+                        position: static;
+                        padding-right: 0;
+                        margin-left: 0;
+                        padding-left: 0;
+                    }
+                    .title{
+                        height: 25px;
+                    }
+                    .description{
+                        height: calc(100% - 100px);
+                        overflow: hidden;
+                        position: relative;
+                        @include max-xl{
+                            max-height: 300px;
+                        }
+                        &:after{
+                            content: '';
+                            height: 60px;
+                            position: absolute;
+                            background: linear-gradient(to bottom,rgba(243,243,243,0.2) 0,rgba(243,243,243,0.82) 31%,#f3f3f3 100%);
+                            bottom: 5px;
+                            left: 0;
+                            width: 100%;
+                        }
+                    }
                     .further-info{
                         position: absolute;
-                        bottom: 29px;
+                        bottom: 28px;
                         
                     }
                 }
@@ -77,8 +144,9 @@ a.btn-further-info{
     border: 2px solid #B5A191;
     text-transform: uppercase;
     font-size: 11px;
-    font-weight: 500;
+    font-weight: 700;
     transition: 0.5s;
+    font-family: $font-helvelticaBold;
     &:hover{
         color: #fff;
         background-color: #B5A191;
@@ -138,6 +206,9 @@ a.btn-further-info{
         position: relative;
         padding: 0 130px;
         display: inline-block;
+        @include mobile{
+            padding: 0 69px;
+        }
         span{
             white-space: nowrap;
             font-style: italic;
@@ -146,7 +217,9 @@ a.btn-further-info{
             background: white;
             padding: 0 30px;
             display: block;
-            @include device{
+            font-family: $font-kingscalson;
+            font-weight: 500;
+            @include max-xl{
                 white-space: inherit;
             }
         }
@@ -161,3 +234,24 @@ a.btn-further-info{
     }
 }
 // end section-title
+body{
+    color: $text-color;
+    a,p{
+        color: $text-color;
+    }
+}
+@media only screen and (min-width: breakpoints(sm)) {
+    .gallery-slide2 .container-fluid {
+        width: 60rem;
+    }
+}
+@media only screen and (min-width: breakpoints(md)) {
+    .gallery-slide2 .container-fluid {
+        width: 80rem;
+    }
+}
+.fancybox-is-open {
+    .fancybox-stage{
+        overflow-y: auto;
+    }
+}
