--- a/Nhom4_Kempinki/src/views/components/homepage/gallery/gallery.scss
+++ b/Nhom4_Kempinki/src/views/components/homepage/gallery/gallery.scss
@@ -2,18 +2,32 @@
 
 .home-gallery{
     margin-bottom: 33px;
+    @include mobile{
+        margin-bottom: 105px;
+    }
     .container{
-        max-width: 1055px;
+        @include min-xl{
+            width: 1020px;
+        }
     }
     .section-title{
         margin-bottom: 46px;
+        .sub-title{
+            padding: 0 20px;
+        }
     }
     .gallery-slide{
         .slick-prev{
             left: -105px;
+            @include max-xl{
+                left: 10px;
+            }
         }
         .slick-next{
             right: -59px;
+            @include max-xl{
+                right: 60px;
+            }
         }
         .slick-prev,.slick-next{
             top: 36%;
@@ -64,15 +78,27 @@
             padding: 6px 42px;
             font-size: 10px;
             font-weight: 700;
+            @include mobile{
+                display: block;
+                width: 40%;
+                padding: 0;
+                margin: 10px auto;
+            }
         }
         .gallery-copy{
             position: absolute;
             top: 3px;
-            right: 0;
+            right: 10px;
             font-size: 13px;
             font-weight: 100;
             color: #BAB4AF;
             letter-spacing: 0.7px;
+            @include mobile{
+                top: auto;
+                bottom: -65px;
+                left: 50%;
+                transform: translateX(-50%);
+            }
         }
     }
 
@@ -80,8 +106,18 @@
 // end home-gallery
 
 .gallery-slide2{
+    display: none;
+    p{
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 16px;
+    }
     a,p{
         color: $text-color-black;
+    }
+    a{
+        &:hover, &:hover p{
+            color: #8c8179;
+        }
     }
     .col-photo{
         min-height: 540px;
@@ -102,6 +138,7 @@
     }
     .user{
         margin-bottom: 40px;
+        font-size: 16px;
         a{
             display: flex;
             img{
@@ -118,6 +155,7 @@
         font-size: 14px;
         line-height: 17px;
         margin-bottom: 35px;
+        font-family: Arial, Helvetica, sans-serif;
     }
     .photo-sharing{
         display: flex;
