--- a/Nhom4_Kempinki/src/views/index.pug
+++ b/Nhom4_Kempinki/src/views/index.pug
@@ -1,16 +1,20 @@
 extends ./layouts/master.pug
 
 block title
-  title My Page - Index
+  title Kempinski
 
 block content
   - var pages = { homePage: '/homepage', testPage: '/test'  }
 
   //- Desktop page
   section.page.home__page
-    h1.page__title # Index page3
+    h1.page__title # Index Homepage
 
     ul(style="list-style: disc; padding-left: 4rem; margin: 4rem 0")
       each val, index in pages
         li
           a(href=val)= index
+  include ./components/homepage/experiences/experiences.pug
+  include ./components/homepage/gallery/gallery.pug
+  include ./components/homepage/specialoffers/specialoffers.pug
+  include ./components/homepage/explore/explore.pug
