--- a/Nhom4_Kempinki/src/views/pages/test.pug
+++ b/Nhom4_Kempinki/src/views/pages/test.pug
@@ -1,7 +1,8 @@
 extends ../layouts/master.pug
 
 block title
-  title My Page - Index
+  title My Page
 
 block content
     h1 Hello
+    a(href="index") Link
